# simplelibs

./: .gitignore  .travis.yml  AUTHOR.md  CHANGELOG.md  README.md  SimpleLibs.sln  makefile
SimpleCore/: CMakeLists.txt  Makefile  SimpleCore.vcxproj  SimpleCore.vcxproj.filters  alist.h  aqueue.h  asnycaqueue.h  astring.cpp  astring.h  asyncalist.h  avector.h  basequeue.h  bytearray.cpp  bytearray.h  casesensitivity.h  char.h  console.cpp  console.h  consolecolor.h  date.h  datetime.cpp  datetime.h  datetimeinfo.h  dir.cpp  dir.h  directory.h  encryption.h  file.cpp  file.h  functions.h  iencryption.h  inifile.cpp  inifile.h  iqueue.h  logger.cpp  logger.h  makefile  mathutils.cpp  mathutils.h  openmode.h  (+13 more)
SimpleCore.Test/: CMakeLists.txt  Makefile  SimpleCore.Test.vcxproj  SimpleCore.Test.vcxproj.filters  aqueuetest.cpp  cleanup.bat  dirtest.cpp  filetest.cpp  inifiletest.cpp  main.cpp  queuetest.cpp  setup.bat  stdafx.cpp  stopwatchtest.cpp  stringtest.cpp  testfile.txt  vectortest.cpp
SimpleCore/chocobo1/: blake1_224.h  blake1_256.h  blake1_384.h  blake1_512.h  blake2.h  blake2s.h  has_160.h  md2.h  md4.h  md5.h  ripemd_128.h  ripemd_160.h  ripemd_256.h  ripemd_320.h  sha1.h  sha2_224.h  sha2_256.h  sha2_384.h  sha2_512.h  sha2_512_224.h  sha2_512_256.h  sha3.h  sm3.h  tiger.h  whirlpool.h
SimpleCore/date/: date.h
SimpleCore/rapidjson/: document.h  fwd.h  memorybuffer.h  memorystream.h  pointer.h  prettywriter.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
SimpleCore/stephan_brumme/: crc32.cpp  crc32.h  hmac.h  keccak.cpp  keccak.h  md5.cpp  md5.h  (+7 more)
(+1270 files in other folders)
